[gd_scene load_steps=4 format=3 uid="uid://bwipg6dbyvweq"]

[ext_resource type="Texture2D" uid="uid://bnga6hvum01rf" path="res://Assets/buton.png" id="1_3xy5o"]
[ext_resource type="Script" path="res://Gadgets/orchard_tree.gd" id="1_f0y43"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrl2n"]
size = Vector2(44, 38)

[node name="OrchardTree" type="Node2D"]
script = ExtResource("1_f0y43")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3xy5o")
hframes = 2

[node name="TreeRadius" type="Area2D" parent="."]
collision_layer = 129
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeRadius"]
shape = SubResource("RectangleShape2D_qrl2n")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="FruitDuration" type="Timer" parent="."]
wait_time = 22.0
one_shot = true

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="FruitDuration" to="." method="_on_fruit_duration_timeout"]
